- Package =gptel=: a Large Language Model (e.g., ChatGPT) chat client.
- Function ~yet-toggle-window-split~, globally bound to =C-c b s=.
- In =org-mode= buffers, open a link by hitting =RET=.
- Package =org-contrib=: enable add-on =ox-extra= to ignore headlines.
- Function ~yet-vc-print-root-log-latest~ bound to =C-c v L= in =vc-dir-mode=.

*** Changed
- Configure more of GUI elements in ~early-init.el~ for Emacs startup stage.
- Rename ~yet-kill-emacs-reset-desktop-state~ to ~yet-kill-emacs-reset-desktop~.
- Disable confusing =org-mode= keybindings only if ~yet-org-noob~ is enabled.
- Set user option =org-export-headline-levels= value to 5.
- Disable =org-html-validation-link=.
- =dired-mode= keybinding =n= now calls ~yet-dired-display-next~.
- =dired-mode= keybinding =p= now calls ~yet-dired-display-previous~.
- =rust-mode= ~yet-rustup-doc~ now bound to =C-c o d= (was =C-c C-h=).
- =php-mode= ~php-search-documentation~ bound to =C-c o d= (was =C-c C-h=).
- Customize windows for buffers display with ~display-buffer-alist~.
- Display =Ediff= control panel in the same frame.
- Do not highlight region in non-selected window.
- Enable =web-mode= for HTML files.
- Configure =org-clock= behavior.
- Disable auto-indentation in =web-mode=.
- Adjust and add more of =php-mode= abbreviations (templates).
- Increase value of ~pulse-iterations~.
- Enable =pdf-view-midnight-minor-mode= by default.

*** Removed
- Package =org-preview-html= in favor of =C-c C-e h o= (~org-export-dispatch~).
- Disable =eglot-report-progress= to reduce clutter in the echo area.
- Disable =eglot-confirm-server-initiated-edits=.


** v2.2.0 - 2023-08-05

This release wraps up further improvements made for *Emacs 28.2*. Future commits
are planned to be *Emacs 29* -oriented (ideally, preserving backward
compatibility).

The main highlights of this release are as follows:
- Better keybindings for =rust-mode=, =php-mode=, =eglot=.
- Local configuration (~yet-~ constants related) improvements.